# Samsung-PRISM---NFT-platform-using-Scalable-Blockchains-Sui-Aptos-Solana

./: README.md  benchmark-results.csv
aptos/: .gitignore  README.md  benchmark-results.json  package-lock.json  package.json
aptos/backend/: server.mjs
aptos/contracts/: Move.toml  modules.json
aptos/contracts/sources/: marketplace.move  nft.move  nft.move.save  real_nft.move
aptos/frontend/: package-lock.json  package.json
aptos/frontend/src/: App.tsx  index.css  main.tsx
aptos/scripts/: benchmark.ts
contracts/MyNFT/: Move.toml
contracts/MyNFT/sources/: RealNFT.move
frontend/src/components/: Marketplace.tsx  Navbar.tsx
frontend/src/context/: ActivityContext.tsx  ToastContext.tsx
frontend/src/pages/: Activity.tsx  Create.tsx
frontend/src/utils/: errors.ts  ipfs.ts  walletTransaction.ts
solana/: .gitignore  README.md
solana/client/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
solana/client/src/: App.tsx  index.css  main.tsx  (+2 more)
solana/contracts/: Anchor.toml  README.md
solana/contracts/programs/nft_marketplace/: Cargo.toml
solana/contracts/programs/nft_marketplace/src/: lib.rs
solana/docker/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf
solana/docs/: BENCHMARK.md  LAUNCH.md  STRESS_TEST.md
solana/scripts/: deploy.sh  stress-test.mjs
sui/: README.md
sui/frontend/: .env  package-lock.json  package.json
sui/sample_data/: metadata.json
sui/scripts/: benchmark.ps1  deploy.js
sui/sui_contracts/: Move.toml  Published.toml
(+128 files in other folders)
